# world-cup-extra-time-vs-penalties

./: .gitignore  README.md  project-plan.md  pyproject.toml
.github/workflows/: static.yml
data/processed/: extra_time_matches.csv
data/raw/: source_inventory.csv
reports/: full-extra-time-vs-penalties.html  full-extra-time-vs-penalties.md
src/world_cup_penalties/: analyze.py  classify.py  clean.py  collect.py  config.py  report.py
tests/: test_classify.py  test_dataset.py
