[project]
name = "world-cup-penalties"
version = "0.1.0"
description = "Analysis of extra time vs penalty outcomes in men's FIFA World Cup knockout matches"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.pyright]
include = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["N999"]

[tool.pytest.ini_options]
pythonpath = ["src"]
